--- a/TipOfTheDay-Core3/TipOfTheDay-Core3/appsettings.json
+++ b/TipOfTheDay-Core3/TipOfTheDay-Core3/appsettings.json
@@ -1,11 +1,15 @@
 {
+  "ConnectionStrings": {
+    "SqlSvrConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TipOfTheDay_Core3-A30AD756-2EBE-475B-BF71-D69E40F42BF7;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SQLiteConnection": "Data Source=GoodBookNook.db",
+    "MySqlConnection": "server=localhost;user id=birdb;password=Secret-1234;database=GoodBookNook;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=AppDbContext-fcdf249d-39c6-4d5c-b5d4-03d4a8b195b9;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
