--- a/TipOfTheDay-Core3/TipOfTheDay-Core3/Properties/launchSettings.json
+++ b/TipOfTheDay-Core3/TipOfTheDay-Core3/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51188",
-      "sslPort": 44300
+      "applicationUrl": "http://localhost:50051",
+      "sslPort": 44314
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "TipOfTheDay_Core3": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
