check-box array is now submitted to Edit
Making progress. Still need to attach tags to tips

--- a/TipOfTheDay-Core3/TipOfTheDay/TipOfTheDay.csproj
+++ b/TipOfTheDay-Core3/TipOfTheDay/TipOfTheDay.csproj
@@ -28,5 +28,9 @@
 
   <ItemGroup>
     <Folder Include="Data\Repositories\" />
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Data\Migrations\" />
   </ItemGroup>
 </Project>
