--- a/TipOfTheDay-Core3/TipOfTheDay/appsettings.json
+++ b/TipOfTheDay-Core3/TipOfTheDay/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     "SqlSvrConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TipOfTheDay_Core3-A30AD756-2EBE-475B-BF71-D69E40F42BF7;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SQLiteConnection": "Data Source=GoodBookNook.db",
-    "MySqlConnection": "server=localhost;user id=birdb;password=Secret-1234;database=GoodBookNook;"
+    "SQLiteConnection": "Data Source=Data/TipOfTheDay.db",
+    "MySqlConnection": "server=localhost;user id=birdb;password=Secret-1234;database=TipOfTheDay;"
   },
   "Logging": {
     "LogLevel": {
